changed common controller delete return JSON instead of string